<resources>
    <string name="app_name">CtrlPg</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Constraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Nombre de usuario invalido</string>
    <string name="invalid_password">La contraseña debe ser mayor a 5 caracteres</string>
    <string name="login_failed">Login failed</string>
    <string name="title_activity_main">CtrlPg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_close_session">Cerrar sesión</string>

    <string name="menu_calendar">Calendario</string>
    <string name="menu_bitacora">Bitácora</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="event">Evento</string>
    <string name="cordon">Cordones</string>
</resources>
