<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="mx.ctrlpg.ui.home.HomeFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_event_fragment"
            app:destination="@id/event_fragment">
            <argument
                android:name="evento"
                app:argType="mx.ctrlpg.data.model.Evento" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="mx.ctrlpg.ui.gallery.GalleryFragment"
        android:label="@string/menu_bitacora"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="mx.ctrlpg.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="mx.ctrlpg.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="mx.ctrlpg.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="mx.ctrlpg.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/event_fragment"
        android:name="mx.ctrlpg.ui.event.EventFragment"
        android:label="@string/event">
        <action
            android:id="@+id/action_event_fragment_to_cordon_fragment"
            app:destination="@id/cordon_fragment">
            <argument
                android:name="cordon"
                app:argType="mx.ctrlpg.data.model.SucursalCordon" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/cordon_fragment"
        android:name="mx.ctrlpg.ui.event.CordonFragment"
        android:label="@string/cordon"/>
</navigation>